--- a/app/assets/stylesheets/admin/layout.scss
+++ b/app/assets/stylesheets/admin/layout.scss
@@ -57,7 +57,7 @@ body {
     float: none;
     clear: both;
     position: relative !important;
-    z-index: 1 !important;
+    z-index: -10 !important;
   }
 }
 
@@ -71,6 +71,20 @@ body {
 .col-md-4 {
   .lte-ie8 & {
     float: left;
-    width: 30%;
+    width: 38%;
+  }
+}
+
+.col-md-8 {
+  .lte-ie8 & {
+    float: left;
+    width: 58%;
+  }
+}
+
+.table.table-striped tbody {
+  .lte-ie8 & {
+    border: 2px solid #000;
+    border-collapse: initial !important;
   }
 }
